curtain z-index fix

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1785,7 +1785,7 @@ ul.main {
 
 /*curtain*/
 #group1 { 
-    z-index: 5; 
+    z-index: 8; 
 }
 
 .cortina {
